fix: repair bottom overflow

--- a/src/components/Shortcuts/Shortcuts.module.scss
+++ b/src/components/Shortcuts/Shortcuts.module.scss
@@ -3,6 +3,9 @@
   height: 70px;
   display: flex;
   padding: 5px;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
   background-color: white;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
